--- a/appinterfacev2/appinterfacev2/acceuil_sauvegarde.xaml
+++ b/appinterfacev2/appinterfacev2/acceuil_sauvegarde.xaml
@@ -10,7 +10,7 @@
         <Label x:Name="nom" Content="Nom" HorizontalAlignment="Left" Margin="36,46,0,0" VerticalAlignment="Top" Width="43"/>
         <TextBox x:Name="text_box_nom" HorizontalAlignment="Left" Margin="179,50,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="TextBox_TextChanged" Background="#FFD4D4D4"/>
         <Label x:Name="source" Content="Source" HorizontalAlignment="Left" Margin="33,121,0,0" VerticalAlignment="Top"/>
-        <TextBox x:Name="txt_source" HorizontalAlignment="Left" Margin="179,116,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Foreground="#FFB8B8B8" Background="#FFD4D4D4"/>
+        <TextBox x:Name="txt_source" HorizontalAlignment="Left" Margin="179,116,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Foreground="Black" Background="#FFD4D4D4"/>
         <TextBox x:Name="txt_cible" HorizontalAlignment="Left" Margin="179,188,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" Background="#FFD4D4D4"/>
         <Label x:Name="cible" Content="Cible" HorizontalAlignment="Left" Margin="36,184,0,0" VerticalAlignment="Top"/>
         <Label x:Name="type_sauvegarde" Content="Type de sauvegarde" HorizontalAlignment="Left" Margin="33,268,0,0" VerticalAlignment="Top"/>
