--- a/appinterfacev2/appinterfacev2/acceuil_sauvegarde.xaml
+++ b/appinterfacev2/appinterfacev2/acceuil_sauvegarde.xaml
@@ -5,7 +5,8 @@
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:appinterfacev2"
         mc:Ignorable="d"
-        Title="acceuil_sauvegarde" Height="600" Width="1080">
+        Title="Save Menu - Prosoft Technology" Height="600" Width="1080"
+        Icon="C:\\deploiement\\appinterfacev2\\icon.png">
     <Grid>
         <Label x:Name="label_nom" HorizontalAlignment="Left" Margin="10,93,0,0" VerticalAlignment="Top" Width="153" Content=""/>
         <TextBox x:Name="text_box_nom" HorizontalAlignment="Left" Margin="179,101,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="120" TextChanged="TextBox_TextChanged" Background="#FFD4D4D4"/>
